added some plastic images

--- a/waste_classification_mobileNetV2.ipynb
+++ b/waste_classification_mobileNetV2.ipynb
@@ -29,16 +29,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Map original categories to plastic and non-plastic\n",
+    "# The model's internal category indexing not align with the Original Category mappings\n",
+    "# Reverse engineer to find the correct classification label (Plastic) - using train set plastic image\n",
     "def map_to_plastic_or_nonplastic(predicted_class):\n",
-    "    if predicted_class == 2:\n",
+    "    # 3 is Plastic\n",
+    "    if predicted_class == 3:\n",
     "        return \"Plastic\"\n",
     "    else:\n",
-    "        return f\"Non-Plastic. The Model predict as {categories[predicted_class]}\""
+    "        return \"Non-Plastic\""
    ]
   },
   {
@@ -325,6 +327,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No class indices found in the model.\n"
+     ]
+    }
+   ],
+   "source": [
+    "if hasattr(model, 'class_indices'):\n",
+    "    print(\"Class indices found:\", model.class_indices)\n",
+    "else:\n",
+    "    print(\"No class indices found in the model.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
@@ -369,22 +391,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 763ms/step\n",
-      "The object is classified as: Non-Plastic. The Model predict as metal\n"
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 26ms/step\n",
+      "The object is classified as: Plastic\n"
      ]
     }
    ],
    "source": [
     "# image_path = 'plastic_bottle_out_of_shape.jpg'\n",
     "# image_path = 'plastic_bottle_white_background.jpg'\n",
-    "image_path = 'plastic_bottle.jpg'\n",
+    "image_path = 'plastic146_in_dataset.jpg' \n",
+    "# image_path = 'plastic_bottle.jpg'\n",
     "\n",
     "result = classify_image(model, image_path)\n",
     "\n",
