--- a/waste_classification_mobileNetV2.ipynb
+++ b/waste_classification_mobileNetV2.ipynb
@@ -309,10 +309,10 @@
     "\n",
     "model.add(mobilenetv2_layer)\n",
     "\n",
-    "# Add the GlobalAveragePooling2D layer (as seen in the .h5 file)\n",
+    "# Add the GlobalAveragePooling2D layer\n",
     "model.add(GlobalAveragePooling2D())\n",
     "\n",
-    "# Add the Dense layer for classification (assuming 12 output classes based on your problem statement)\n",
+    "# Add the Dense layer for classification\n",
     "model.add(Dense(12, activation='softmax'))\n",
     "\n",
     "# Load the weights from your .h5 file\n",
