added sample metal cans images for testing

--- a/waste_classification_mobileNetV2.ipynb
+++ b/waste_classification_mobileNetV2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "True"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,8 +56,10 @@
     "    # 3 is Plastic\n",
     "    if predicted_class == 3:\n",
     "        return \"Plastic\"\n",
+    "    elif predicted_class == 6:\n",
+    "        return \"Metal\"\n",
     "    else:\n",
-    "        return \"Non-Plastic\""
+    "        return \"Others\""
    ]
   },
   {
@@ -301,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,6 +337,8 @@
     "    \n",
     "    # Get the predicted class (argmax - the index of the highest probability)\n",
     "    predicted_class = np.argmax(predictions, axis=1)[0]\n",
+    "\n",
+    "    # print(predicted_class)\n",
     "    \n",
     "    # Map the predicted class to plastic or non-plastic before returning\n",
     "    return map_to_plastic_or_nonplastic(predicted_class)"
@@ -342,20 +346,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 1s 640ms/step\n",
-      "The object is classified as: Plastic\n"
+      "1/1 [==============================] - 0s 27ms/step\n",
+      "The object is classified as: Metal\n"
      ]
     }
    ],
    "source": [
-    "image_path = 'sample_data/plastic146_in_dataset.jpg'\n",
+    "image_path = 'sample_data/metal118_in_dataset.jpg'\n",
     "\n",
     "result = classify_image(model, image_path)\n",
     "\n",
