--- a/fineTuning/waste_classification_fine_tuning.ipynb
+++ b/fineTuning/waste_classification_fine_tuning.ipynb
@@ -23,6 +23,7 @@
     "mobilenetv2_layer = mobilenetv2.MobileNetV2(include_top=False, \n",
     "                                            input_shape=(224, 224, 3),\n",
     "                                            weights='../mobilenet-v2-keras-weights/mobilenet_v2_weights_tf_dim_ordering_tf_kernels_1.0_224_no_top.h5')\n",
+    "\n",
     "mobilenetv2_layer.trainable = False"
    ]
   },
@@ -90,7 +91,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from keras.preprocessing.image import ImageDataGenerator"
+    "from keras.preprocessing.image import ImageDataGenerator\n",
+    "from keras.callbacks import EarlyStopping"
    ]
   },
   {
@@ -99,6 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# train_dir = '../../trainingData/'\n",
     "train_dir = 'trainingData/'"
    ]
   },
@@ -111,8 +114,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 288 images belonging to 2 classes.\n",
-      "Found 72 images belonging to 2 classes.\n",
+      "Found 324 images belonging to 2 classes.\n",
+      "Found 36 images belonging to 2 classes.\n",
       "Class Indices: {'metal': 0, 'plastic': 1}\n"
      ]
     }
@@ -120,29 +123,31 @@
    "source": [
     "# Create an ImageDataGenerator with data augmentation and rescaling\n",
     "train_datagen = ImageDataGenerator(\n",
-    "    rescale=1./255,              # Normalize pixel values between 0 and 1\n",
-    "    shear_range=0.2,             # Randomly apply shear transformations\n",
-    "    zoom_range=0.2,              # Randomly zoom into images\n",
-    "    horizontal_flip=True,        # Randomly flip images horizontally\n",
-    "    validation_split=0.2         # Split 20% of the data for validation\n",
+    "    # rescale=1./255,\n",
+    "    # zoom_range=0.2,\n",
+    "    # rotation_range=5,\n",
+    "    # brightness_range=[0.9, 1.1],\n",
+    "    # horizontal_flip=True,\n",
+    "    # vertical_flip=True,\n",
+    "    validation_split=0.1\n",
     ")\n",
     "\n",
     "# Load training data with flow_from_directory\n",
     "train_generator = train_datagen.flow_from_directory(\n",
     "    train_dir,\n",
     "    target_size=(224, 224),      # Resizes images to 224x224\n",
-    "    batch_size=32,               # Number of images per batch\n",
-    "    class_mode='categorical',    # Since we have two classes: metal and plastic\n",
-    "    subset='training'            # Use the 'training' subset\n",
+    "    batch_size=16,               # Number of images per batch\n",
+    "    class_mode='categorical', \n",
+    "    subset='training'\n",
     ")\n",
     "\n",
     "# Load validation data\n",
     "validation_generator = train_datagen.flow_from_directory(\n",
     "    train_dir,\n",
     "    target_size=(224, 224),\n",
-    "    batch_size=32,\n",
+    "    batch_size=16,\n",
     "    class_mode='categorical',\n",
-    "    subset='validation'          # Use the 'validation' subset\n",
+    "    subset='validation'\n",
     ")\n",
     "\n",
     "# Print class indices to verify the labels\n",
@@ -151,44 +156,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class_weights = {0: 1.0, 1: 1.2}"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/10\n",
-      "9/9 [==============================] - 7s 602ms/step - loss: 0.7265 - categorical_accuracy: 0.5000 - val_loss: 0.6942 - val_categorical_accuracy: 0.5312\n",
-      "Epoch 2/10\n",
-      "9/9 [==============================] - 4s 476ms/step - loss: 0.6989 - categorical_accuracy: 0.4757 - val_loss: 0.6997 - val_categorical_accuracy: 0.4531\n",
-      "Epoch 3/10\n",
-      "9/9 [==============================] - 4s 472ms/step - loss: 0.6939 - categorical_accuracy: 0.5000 - val_loss: 0.6968 - val_categorical_accuracy: 0.4688\n",
-      "Epoch 4/10\n",
-      "9/9 [==============================] - 4s 468ms/step - loss: 0.6945 - categorical_accuracy: 0.4965 - val_loss: 0.6899 - val_categorical_accuracy: 0.5156\n",
-      "Epoch 5/10\n",
-      "9/9 [==============================] - 4s 467ms/step - loss: 0.6921 - categorical_accuracy: 0.5312 - val_loss: 0.6923 - val_categorical_accuracy: 0.5156\n",
-      "Epoch 6/10\n",
-      "9/9 [==============================] - 4s 467ms/step - loss: 0.6909 - categorical_accuracy: 0.5417 - val_loss: 0.6920 - val_categorical_accuracy: 0.5000\n",
-      "Epoch 7/10\n",
-      "9/9 [==============================] - 4s 461ms/step - loss: 0.6924 - categorical_accuracy: 0.4861 - val_loss: 0.6945 - val_categorical_accuracy: 0.4531\n",
-      "Epoch 8/10\n",
-      "9/9 [==============================] - 4s 469ms/step - loss: 0.6947 - categorical_accuracy: 0.5139 - val_loss: 0.6936 - val_categorical_accuracy: 0.5312\n",
-      "Epoch 9/10\n",
-      "9/9 [==============================] - 4s 470ms/step - loss: 0.6924 - categorical_accuracy: 0.5104 - val_loss: 0.6910 - val_categorical_accuracy: 0.5781\n",
-      "Epoch 10/10\n",
-      "9/9 [==============================] - 4s 470ms/step - loss: 0.6912 - categorical_accuracy: 0.5000 - val_loss: 0.6922 - val_categorical_accuracy: 0.4688\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Fine-tune the model on the new data\n",
-    "history = model.fit(\n",
-    "    train_generator,\n",
-    "    steps_per_epoch=train_generator.samples // train_generator.batch_size,\n",
-    "    validation_data=validation_generator,\n",
-    "    validation_steps=validation_generator.samples // validation_generator.batch_size,\n",
-    "    epochs=10\n",
+    "early_stop = EarlyStopping(\n",
+    "    monitor='val_loss',  # Monitor validation loss\n",
+    "    patience=5,          # Stop after 5 epochs of no improvement\n",
+    "    restore_best_weights=True  # Restore the best weights\n",
     ")"
    ]
   },
@@ -201,8 +185,63 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3/3 [==============================] - 1s 227ms/step - loss: 0.6895 - categorical_accuracy: 0.5833\n",
-      "Validation Loss: 0.6894851326942444, Validation Accuracy: 0.5833333134651184\n"
+      "Epoch 1/15\n",
+      "20/20 [==============================] - 6s 202ms/step - loss: 0.6738 - categorical_accuracy: 0.6071 - val_loss: 0.4888 - val_categorical_accuracy: 0.8438\n",
+      "Epoch 2/15\n",
+      "20/20 [==============================] - 3s 167ms/step - loss: 0.5154 - categorical_accuracy: 0.7630 - val_loss: 0.3759 - val_categorical_accuracy: 0.9375\n",
+      "Epoch 3/15\n",
+      "20/20 [==============================] - 3s 158ms/step - loss: 0.4131 - categorical_accuracy: 0.8734 - val_loss: 0.2967 - val_categorical_accuracy: 0.9062\n",
+      "Epoch 4/15\n",
+      "20/20 [==============================] - 3s 157ms/step - loss: 0.3491 - categorical_accuracy: 0.9058 - val_loss: 0.2368 - val_categorical_accuracy: 0.9375\n",
+      "Epoch 5/15\n",
+      "20/20 [==============================] - 3s 161ms/step - loss: 0.2907 - categorical_accuracy: 0.9469 - val_loss: 0.2261 - val_categorical_accuracy: 0.9062\n",
+      "Epoch 6/15\n",
+      "20/20 [==============================] - 3s 156ms/step - loss: 0.2470 - categorical_accuracy: 0.9545 - val_loss: 0.1946 - val_categorical_accuracy: 0.9375\n",
+      "Epoch 7/15\n",
+      "20/20 [==============================] - 3s 162ms/step - loss: 0.2194 - categorical_accuracy: 0.9656 - val_loss: 0.1700 - val_categorical_accuracy: 0.9688\n",
+      "Epoch 8/15\n",
+      "20/20 [==============================] - 3s 160ms/step - loss: 0.1917 - categorical_accuracy: 0.9708 - val_loss: 0.1470 - val_categorical_accuracy: 1.0000\n",
+      "Epoch 9/15\n",
+      "20/20 [==============================] - 3s 161ms/step - loss: 0.1769 - categorical_accuracy: 0.9675 - val_loss: 0.1313 - val_categorical_accuracy: 1.0000\n",
+      "Epoch 10/15\n",
+      "20/20 [==============================] - 3s 160ms/step - loss: 0.1616 - categorical_accuracy: 0.9675 - val_loss: 0.1332 - val_categorical_accuracy: 1.0000\n",
+      "Epoch 11/15\n",
+      "20/20 [==============================] - 3s 158ms/step - loss: 0.1462 - categorical_accuracy: 0.9740 - val_loss: 0.1157 - val_categorical_accuracy: 1.0000\n",
+      "Epoch 12/15\n",
+      "20/20 [==============================] - 3s 158ms/step - loss: 0.1368 - categorical_accuracy: 0.9708 - val_loss: 0.1072 - val_categorical_accuracy: 1.0000\n",
+      "Epoch 13/15\n",
+      "20/20 [==============================] - 3s 155ms/step - loss: 0.1204 - categorical_accuracy: 0.9773 - val_loss: 0.1004 - val_categorical_accuracy: 1.0000\n",
+      "Epoch 14/15\n",
+      "20/20 [==============================] - 3s 155ms/step - loss: 0.1179 - categorical_accuracy: 0.9708 - val_loss: 0.0952 - val_categorical_accuracy: 1.0000\n",
+      "Epoch 15/15\n",
+      "20/20 [==============================] - 3s 155ms/step - loss: 0.1105 - categorical_accuracy: 0.9708 - val_loss: 0.0819 - val_categorical_accuracy: 1.0000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Fine-tune the model on the new data\n",
+    "history = model.fit(\n",
+    "    train_generator,\n",
+    "    steps_per_epoch=train_generator.samples // train_generator.batch_size,\n",
+    "    validation_data=validation_generator,\n",
+    "    validation_steps=validation_generator.samples // validation_generator.batch_size,\n",
+    "    callbacks=[early_stop],\n",
+    "    # class_weight=class_weights,\n",
+    "    epochs=15\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3/3 [==============================] - 0s 96ms/step - loss: 0.0825 - categorical_accuracy: 1.0000\n",
+      "Validation Loss: 0.08247848600149155, Validation Accuracy: 1.0\n"
      ]
     }
    ],
@@ -224,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,11 +277,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_path = '../sample_data/plastic_bottle_out_of_shape.jpg'\n",
+    "# img_path = '../sample_data/metal_coke.jpg'\n",
+    "# img_path = '../sample_data/plastic_bottle_out_of_shape.jpg'\n",
+    "# img_path = 'trainingData/metal/image_20240922_040431_4.jpg'\n",
+    "# img_path = 'trainingData/metal/image_20240922_034123_3.jpg'\n",
+    "img_path = 'trainingData/plastic/image_20240922_023123_10.jpg'\n",
+    "# img_path = 'trainingData/plastic/image_20240922_025322_17.jpg'\n",
     "img = image.load_img(img_path, target_size=(224, 224))\n",
     "img_array = image.img_to_array(img)\n",
     "img_array = np.expand_dims(img_array, axis=0)\n",
@@ -251,25 +295,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 1s 532ms/step\n",
-      "Predicted Class: plastic\n"
+      "1/1 [==============================] - 0s 28ms/step\n",
+      "[[0.5467155  0.45328447]]\n",
+      "Predicted Class: metal\n"
      ]
     }
    ],
    "source": [
     "# Predict using the fine-tuned model\n",
     "predictions = model.predict(img_array)\n",
+    "print(predictions)\n",
     "class_index = np.argmax(predictions, axis=1)\n",
     "\n",
     "# Map the predicted index to class label\n",
-    "class_labels = ['plastic', 'metal']\n",
+    "class_labels = ['metal', 'plastic']\n",
     "predicted_class = class_labels[class_index[0]]\n",
     "print(f'Predicted Class: {predicted_class}')"
    ]
