updated fine tuning script

--- a/fineTuning/waste_classification_fine_tuning.ipynb
+++ b/fineTuning/waste_classification_fine_tuning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,26 +29,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential\"\n",
+      "Model: \"sequential_1\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " lambda (Lambda)             (None, 224, 224, 3)       0         \n",
+      " lambda_1 (Lambda)           (None, 224, 224, 3)       0         \n",
       "                                                                 \n",
       " mobilenetv2_1.00_224 (Funct  (None, 7, 7, 1280)       2257984   \n",
       " ional)                                                          \n",
       "                                                                 \n",
-      " global_average_pooling2d (G  (None, 1280)             0         \n",
-      " lobalAveragePooling2D)                                          \n",
+      " global_average_pooling2d_1   (None, 1280)             0         \n",
+      " (GlobalAveragePooling2D)                                        \n",
       "                                                                 \n",
-      " dense (Dense)               (None, 2)                 2562      \n",
+      " dense_1 (Dense)             (None, 2)                 2562      \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 2,260,546\n",
@@ -87,17 +87,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "from keras.preprocessing.image import ImageDataGenerator\n",
-    "from keras.callbacks import EarlyStopping"
+    "from keras.callbacks import EarlyStopping, ReduceLROnPlateau"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -123,11 +123,11 @@
    "source": [
     "# Create an ImageDataGenerator with data augmentation and rescaling\n",
     "train_datagen = ImageDataGenerator(\n",
-    "    # rescale=1./255,\n",
-    "    # zoom_range=0.2,\n",
-    "    # rotation_range=5,\n",
-    "    # brightness_range=[0.9, 1.1],\n",
-    "    # horizontal_flip=True,\n",
+    "    rescale=1./255,\n",
+    "    zoom_range=0.1,\n",
+    "    rotation_range=15,\n",
+    "    brightness_range=[0.8, 1.2],\n",
+    "    horizontal_flip=True,\n",
     "    # vertical_flip=True,\n",
     "    validation_split=0.1\n",
     ")\n",
@@ -156,65 +156,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class_weights = {0: 1.0, 1: 1.2}"
+    "class_weights = {0: 1.0, 1: 1.0}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "early_stop = EarlyStopping(\n",
     "    monitor='val_loss',  # Monitor validation loss\n",
-    "    patience=5,          # Stop after 5 epochs of no improvement\n",
+    "    patience=3,          # Stop after 5 epochs of no improvement\n",
     "    restore_best_weights=True  # Restore the best weights\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reduce_lr = ReduceLROnPlateau(monitor='val_loss', factor=0.2, patience=3, min_lr=1e-6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/15\n",
-      "20/20 [==============================] - 6s 202ms/step - loss: 0.6738 - categorical_accuracy: 0.6071 - val_loss: 0.4888 - val_categorical_accuracy: 0.8438\n",
-      "Epoch 2/15\n",
-      "20/20 [==============================] - 3s 167ms/step - loss: 0.5154 - categorical_accuracy: 0.7630 - val_loss: 0.3759 - val_categorical_accuracy: 0.9375\n",
-      "Epoch 3/15\n",
-      "20/20 [==============================] - 3s 158ms/step - loss: 0.4131 - categorical_accuracy: 0.8734 - val_loss: 0.2967 - val_categorical_accuracy: 0.9062\n",
-      "Epoch 4/15\n",
-      "20/20 [==============================] - 3s 157ms/step - loss: 0.3491 - categorical_accuracy: 0.9058 - val_loss: 0.2368 - val_categorical_accuracy: 0.9375\n",
-      "Epoch 5/15\n",
-      "20/20 [==============================] - 3s 161ms/step - loss: 0.2907 - categorical_accuracy: 0.9469 - val_loss: 0.2261 - val_categorical_accuracy: 0.9062\n",
-      "Epoch 6/15\n",
-      "20/20 [==============================] - 3s 156ms/step - loss: 0.2470 - categorical_accuracy: 0.9545 - val_loss: 0.1946 - val_categorical_accuracy: 0.9375\n",
-      "Epoch 7/15\n",
-      "20/20 [==============================] - 3s 162ms/step - loss: 0.2194 - categorical_accuracy: 0.9656 - val_loss: 0.1700 - val_categorical_accuracy: 0.9688\n",
-      "Epoch 8/15\n",
-      "20/20 [==============================] - 3s 160ms/step - loss: 0.1917 - categorical_accuracy: 0.9708 - val_loss: 0.1470 - val_categorical_accuracy: 1.0000\n",
-      "Epoch 9/15\n",
-      "20/20 [==============================] - 3s 161ms/step - loss: 0.1769 - categorical_accuracy: 0.9675 - val_loss: 0.1313 - val_categorical_accuracy: 1.0000\n",
-      "Epoch 10/15\n",
-      "20/20 [==============================] - 3s 160ms/step - loss: 0.1616 - categorical_accuracy: 0.9675 - val_loss: 0.1332 - val_categorical_accuracy: 1.0000\n",
-      "Epoch 11/15\n",
-      "20/20 [==============================] - 3s 158ms/step - loss: 0.1462 - categorical_accuracy: 0.9740 - val_loss: 0.1157 - val_categorical_accuracy: 1.0000\n",
-      "Epoch 12/15\n",
-      "20/20 [==============================] - 3s 158ms/step - loss: 0.1368 - categorical_accuracy: 0.9708 - val_loss: 0.1072 - val_categorical_accuracy: 1.0000\n",
-      "Epoch 13/15\n",
-      "20/20 [==============================] - 3s 155ms/step - loss: 0.1204 - categorical_accuracy: 0.9773 - val_loss: 0.1004 - val_categorical_accuracy: 1.0000\n",
-      "Epoch 14/15\n",
-      "20/20 [==============================] - 3s 155ms/step - loss: 0.1179 - categorical_accuracy: 0.9708 - val_loss: 0.0952 - val_categorical_accuracy: 1.0000\n",
-      "Epoch 15/15\n",
-      "20/20 [==============================] - 3s 155ms/step - loss: 0.1105 - categorical_accuracy: 0.9708 - val_loss: 0.0819 - val_categorical_accuracy: 1.0000\n"
+      "Epoch 1/8\n",
+      "20/20 [==============================] - 7s 254ms/step - loss: 1.0754 - categorical_accuracy: 0.4935 - val_loss: 0.8377 - val_categorical_accuracy: 0.5000 - lr: 1.0000e-04\n",
+      "Epoch 2/8\n",
+      "20/20 [==============================] - 4s 221ms/step - loss: 0.7483 - categorical_accuracy: 0.4903 - val_loss: 0.6955 - val_categorical_accuracy: 0.5000 - lr: 1.0000e-04\n",
+      "Epoch 3/8\n",
+      "20/20 [==============================] - 4s 214ms/step - loss: 0.6967 - categorical_accuracy: 0.4838 - val_loss: 0.6934 - val_categorical_accuracy: 0.5000 - lr: 1.0000e-04\n",
+      "Epoch 4/8\n",
+      "20/20 [==============================] - 4s 212ms/step - loss: 0.6959 - categorical_accuracy: 0.4545 - val_loss: 0.6960 - val_categorical_accuracy: 0.5000 - lr: 1.0000e-04\n",
+      "Epoch 5/8\n",
+      "20/20 [==============================] - 4s 210ms/step - loss: 0.6936 - categorical_accuracy: 0.5065 - val_loss: 0.6915 - val_categorical_accuracy: 0.5938 - lr: 1.0000e-04\n",
+      "Epoch 6/8\n",
+      "20/20 [==============================] - 4s 212ms/step - loss: 0.6921 - categorical_accuracy: 0.5065 - val_loss: 0.6957 - val_categorical_accuracy: 0.4062 - lr: 1.0000e-04\n",
+      "Epoch 7/8\n",
+      "20/20 [==============================] - 4s 227ms/step - loss: 0.6926 - categorical_accuracy: 0.5130 - val_loss: 0.6891 - val_categorical_accuracy: 0.4688 - lr: 1.0000e-04\n",
+      "Epoch 8/8\n",
+      "20/20 [==============================] - 5s 248ms/step - loss: 0.6941 - categorical_accuracy: 0.4870 - val_loss: 0.6937 - val_categorical_accuracy: 0.4688 - lr: 1.0000e-04\n"
      ]
     }
    ],
@@ -225,23 +220,23 @@
     "    steps_per_epoch=train_generator.samples // train_generator.batch_size,\n",
     "    validation_data=validation_generator,\n",
     "    validation_steps=validation_generator.samples // validation_generator.batch_size,\n",
-    "    callbacks=[early_stop],\n",
-    "    # class_weight=class_weights,\n",
-    "    epochs=15\n",
+    "    callbacks=[early_stop, reduce_lr],\n",
+    "    class_weight=class_weights,\n",
+    "    epochs=8\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3/3 [==============================] - 0s 96ms/step - loss: 0.0825 - categorical_accuracy: 1.0000\n",
-      "Validation Loss: 0.08247848600149155, Validation Accuracy: 1.0\n"
+      "13/13 [==============================] - 2s 140ms/step - loss: 0.1751 - categorical_accuracy: 0.9798\n",
+      "Validation Loss: 0.17507001757621765, Validation Accuracy: 0.9797979593276978\n"
      ]
     }
    ],
@@ -263,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,16 +272,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
     "# img_path = '../sample_data/metal_coke.jpg'\n",
-    "# img_path = '../sample_data/plastic_bottle_out_of_shape.jpg'\n",
+    "# img_path = '../sample_data/plastic_bottle_partial.jpg'\n",
     "# img_path = 'trainingData/metal/image_20240922_040431_4.jpg'\n",
     "# img_path = 'trainingData/metal/image_20240922_034123_3.jpg'\n",
-    "img_path = 'trainingData/plastic/image_20240922_023123_10.jpg'\n",
-    "# img_path = 'trainingData/plastic/image_20240922_025322_17.jpg'\n",
+    "# img_path = 'trainingData/plastic/image_20240922_023123_10.jpg'\n",
+    "img_path = 'trainingData/plastic/image_20240922_030627_19.jpg'\n",
     "img = image.load_img(img_path, target_size=(224, 224))\n",
     "img_array = image.img_to_array(img)\n",
     "img_array = np.expand_dims(img_array, axis=0)\n",
@@ -295,15 +290,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 28ms/step\n",
-      "[[0.5467155  0.45328447]]\n",
+      "1/1 [==============================] - 0s 40ms/step\n",
+      "[[0.7413791 0.2586209]]\n",
       "Predicted Class: metal\n"
      ]
     }
