--- a/fineTuning/waste_classification_fine_tuning.ipynb
+++ b/fineTuning/waste_classification_fine_tuning.ipynb
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
     "# img_path = 'trainingData/metal/image_20240922_040431_4.jpg'\n",
     "# img_path = 'trainingData/metal/image_20240922_034123_3.jpg'\n",
     "# img_path = 'trainingData/plastic/image_20240922_023123_10.jpg'\n",
-    "img_path = 'trainingData/plastic/image_20240922_030627_19.jpg'\n",
+    "img_path = 'trainingData/plastic/image_20240922_031110_3.jpg'\n",
     "img = image.load_img(img_path, target_size=(224, 224))\n",
     "img_array = image.img_to_array(img)\n",
     "img_array = np.expand_dims(img_array, axis=0)\n",
@@ -290,15 +290,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 40ms/step\n",
-      "[[0.7413791 0.2586209]]\n",
+      "1/1 [==============================] - 0s 29ms/step\n",
+      "[[0.75754875 0.24245124]]\n",
       "Predicted Class: metal\n"
      ]
     }
@@ -310,7 +310,7 @@
     "class_index = np.argmax(predictions, axis=1)\n",
     "\n",
     "# Map the predicted index to class label\n",
-    "class_labels = ['metal', 'plastic']\n",
+    "class_labels = ('metal', 'plastic')\n",
     "predicted_class = class_labels[class_index[0]]\n",
     "print(f'Predicted Class: {predicted_class}')"
    ]
