create model inference script

--- a/fineTuning/waste_classification_fine_tuning.ipynb
+++ b/fineTuning/waste_classification_fine_tuning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,26 +97,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# train_dir = '../../trainingData/'\n",
-    "train_dir = 'trainingData/'"
+    "train_dir = '../trainingData/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 324 images belonging to 2 classes.\n",
-      "Found 36 images belonging to 2 classes.\n",
-      "Class Indices: {'metal': 0, 'plastic': 1}\n"
+      "Found 162 images belonging to 2 classes.\n",
+      "Found 18 images belonging to 2 classes.\n",
+      "Class Indices: {'metalNoLid': 0, 'plasticNoLid': 1}\n"
      ]
     }
    ],
@@ -124,7 +124,7 @@
     "# Create an ImageDataGenerator with data augmentation and rescaling\n",
     "train_datagen = ImageDataGenerator(\n",
     "    rescale=1./255,\n",
-    "    zoom_range=0.1,\n",
+    "    # zoom_range=0.1,\n",
     "    rotation_range=15,\n",
     "    brightness_range=[0.8, 1.2],\n",
     "    horizontal_flip=True,\n",
@@ -156,29 +156,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class_weights = {0: 1.0, 1: 1.0}"
+    "class_weights = {0: 1.5, 1: 1.0}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "early_stop = EarlyStopping(\n",
     "    monitor='val_loss',  # Monitor validation loss\n",
-    "    patience=3,          # Stop after 5 epochs of no improvement\n",
+    "    patience=5,          # Stop after 5 epochs of no improvement\n",
     "    restore_best_weights=True  # Restore the best weights\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,29 +187,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/8\n",
-      "20/20 [==============================] - 7s 254ms/step - loss: 1.0754 - categorical_accuracy: 0.4935 - val_loss: 0.8377 - val_categorical_accuracy: 0.5000 - lr: 1.0000e-04\n",
-      "Epoch 2/8\n",
-      "20/20 [==============================] - 4s 221ms/step - loss: 0.7483 - categorical_accuracy: 0.4903 - val_loss: 0.6955 - val_categorical_accuracy: 0.5000 - lr: 1.0000e-04\n",
-      "Epoch 3/8\n",
-      "20/20 [==============================] - 4s 214ms/step - loss: 0.6967 - categorical_accuracy: 0.4838 - val_loss: 0.6934 - val_categorical_accuracy: 0.5000 - lr: 1.0000e-04\n",
-      "Epoch 4/8\n",
-      "20/20 [==============================] - 4s 212ms/step - loss: 0.6959 - categorical_accuracy: 0.4545 - val_loss: 0.6960 - val_categorical_accuracy: 0.5000 - lr: 1.0000e-04\n",
-      "Epoch 5/8\n",
-      "20/20 [==============================] - 4s 210ms/step - loss: 0.6936 - categorical_accuracy: 0.5065 - val_loss: 0.6915 - val_categorical_accuracy: 0.5938 - lr: 1.0000e-04\n",
-      "Epoch 6/8\n",
-      "20/20 [==============================] - 4s 212ms/step - loss: 0.6921 - categorical_accuracy: 0.5065 - val_loss: 0.6957 - val_categorical_accuracy: 0.4062 - lr: 1.0000e-04\n",
-      "Epoch 7/8\n",
-      "20/20 [==============================] - 4s 227ms/step - loss: 0.6926 - categorical_accuracy: 0.5130 - val_loss: 0.6891 - val_categorical_accuracy: 0.4688 - lr: 1.0000e-04\n",
-      "Epoch 8/8\n",
-      "20/20 [==============================] - 5s 248ms/step - loss: 0.6941 - categorical_accuracy: 0.4870 - val_loss: 0.6937 - val_categorical_accuracy: 0.4688 - lr: 1.0000e-04\n"
+      "Epoch 1/10\n",
+      "10/10 [==============================] - 5s 297ms/step - loss: 0.8300 - categorical_accuracy: 0.6507 - val_loss: 0.6320 - val_categorical_accuracy: 0.6875 - lr: 1.0000e-04\n",
+      "Epoch 2/10\n",
+      "10/10 [==============================] - 2s 216ms/step - loss: 0.8055 - categorical_accuracy: 0.6644 - val_loss: 0.6688 - val_categorical_accuracy: 0.6875 - lr: 1.0000e-04\n",
+      "Epoch 3/10\n",
+      "10/10 [==============================] - 2s 217ms/step - loss: 0.8073 - categorical_accuracy: 0.6575 - val_loss: 0.6806 - val_categorical_accuracy: 0.6250 - lr: 1.0000e-04\n",
+      "Epoch 4/10\n",
+      "10/10 [==============================] - 2s 207ms/step - loss: 0.7959 - categorical_accuracy: 0.6712 - val_loss: 0.6567 - val_categorical_accuracy: 0.6875 - lr: 1.0000e-04\n",
+      "Epoch 5/10\n",
+      "10/10 [==============================] - 2s 204ms/step - loss: 0.7987 - categorical_accuracy: 0.6644 - val_loss: 0.6711 - val_categorical_accuracy: 0.6250 - lr: 2.0000e-05\n",
+      "Epoch 6/10\n",
+      "10/10 [==============================] - 2s 211ms/step - loss: 0.8030 - categorical_accuracy: 0.6575 - val_loss: 0.6402 - val_categorical_accuracy: 0.7500 - lr: 2.0000e-05\n"
      ]
     }
    ],
@@ -222,7 +218,7 @@
     "    validation_steps=validation_generator.samples // validation_generator.batch_size,\n",
     "    callbacks=[early_stop, reduce_lr],\n",
     "    class_weight=class_weights,\n",
-    "    epochs=8\n",
+    "    epochs=10\n",
     ")"
    ]
   },
@@ -258,14 +254,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "from tensorflow.keras.models import load_model\n",
     "import numpy as np\n",
-    "from tensorflow.keras.preprocessing import image\n",
-    "\n",
+    "from tensorflow.keras.preprocessing import image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Load the fine-tuned model\n",
     "model = load_model('fine_tuned_plastic_metal_model.h5')"
    ]
@@ -281,7 +284,8 @@
     "# img_path = 'trainingData/metal/image_20240922_040431_4.jpg'\n",
     "# img_path = 'trainingData/metal/image_20240922_034123_3.jpg'\n",
     "# img_path = 'trainingData/plastic/image_20240922_023123_10.jpg'\n",
-    "img_path = 'trainingData/plastic/image_20240922_031110_3.jpg'\n",
+    "# img_path = 'trainingData/plastic/image_20240922_031110_3.jpg'\n",
+    "img_path = '../trainingData/metalNoLid/image_20240923_024508_1.jpg'\n",
     "img = image.load_img(img_path, target_size=(224, 224))\n",
     "img_array = image.img_to_array(img)\n",
     "img_array = np.expand_dims(img_array, axis=0)\n",
@@ -297,9 +301,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 29ms/step\n",
-      "[[0.75754875 0.24245124]]\n",
-      "Predicted Class: metal\n"
+      "1/1 [==============================] - 0s 475ms/step\n",
+      "[[0.40272334 0.5972767 ]]\n",
+      "Predicted Class: plastic\n"
      ]
     }
    ],
